--- a/src/index.css
+++ b/src/index.css
@@ -11,5 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+#footer {
+  text-align: center;
+  margin-bottom: 25px;
+  margin-top: 30px;
+}
 
 
